layout bugs

--- a/client-web/src/index.css
+++ b/client-web/src/index.css
@@ -2,16 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 .content {
   margin: 10px;
+  flex: 5;
 }
 
 html, body, .viewport, #root {
   width: 100%;
   height: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 button a {
@@ -57,7 +60,5 @@ button a {
               flex: 1;
 }
 
-.content {
-          flex: 5;
-}
+
 
